# wifipassview

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
wifipassview/: __init__.py  __main__.py  wifipassview.py
