[tool.poetry]
name = "wifipassview"
version = "1.0.3"
description = "Utility to view Wi-Fi profiles and their passwords."
authors = ["frosty <inthishouseofcards@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["F", "E", "W", "I", "Q", "TCH", "PTH", "N"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
